After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 707692 - Wrong home page URL
Wrong home page URL
Status: RESOLVED FIXED
Product: hitori
Classification: Applications
Component: General
git master
Other All
: Normal normal
: ---
Assigned To: hitori-maint
hitori-maint
Depends on:
Blocks:
 
 
Reported: 2013-09-07 16:06 UTC by Peter De Wachter
Modified: 2013-09-11 03:12 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Peter De Wachter 2013-09-07 16:06:46 UTC
The home page of Hitori is listed as http://live.gnome.org/Hitori (in the README about dialog, the README file, etc.) but that page no longer exists. It has been moved to https://wiki.gnome.org/Apps/Hitori in a wiki reorganization.
Comment 1 Philip Withnall 2013-09-11 03:12:49 UTC
commit 4a94f84c76df85e20d99962b1a2b58ae1a984d26
Author: Philip Withnall <philip@tecnocode.co.uk>
Date:   Tue Sep 10 21:05:22 2013 -0600

    docs: Update application home page
    
    The old home page has disappeared following an unexpected wiki
    reorganisation.
    
    Closes: https://bugzilla.gnome.org/show_bug.cgi?id=707692

 README          | 2 +-
 configure.ac    | 2 +-
 hitori.doap     | 2 +-
 src/interface.c | 2 +-
 4 files changed, 4 insertions(+), 4 deletions(-)