docs: Update application home page

The old home page has disappeared following an unexpected wiki
reorganisation.

Closes: https://bugzilla.gnome.org/show_bug.cgi?id=707692